--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "noahbuscher/macaw": "dev-master",
     "illuminate/database": "*",
     "slim/http": "^0.3.0",
-    "twig/twig": "^1.35"
+    "twig/twig": "^1.35",
+    "phpunit/phpunit": "5.6.*"
   },
   "autoload": {
     "psr-4": {
